# kafjisho-api

./: Cargo.toml  diesel.toml
src/: main.rs
src/api/: mod.rs
src/api/axum_http/: http_router.rs  mod.rs
src/api/axum_http/routers/: japanese_word_router.rs  mod.rs
src/api/controllers/: japanese_word_controller.rs  mod.rs
src/application/use_cases/: mod.rs
src/application/use_cases/japanese_word/: get_japanese_word.rs  get_japanese_word_test.rs  mod.rs
src/config/: config_loader.rs  config_model.rs
src/domain/models/: japanese_word.rs
src/domain/repositories/: japanese_word.rs
src/infrastructure/databases/postgres/: mod.rs  postgres_connection.rs  schema.rs
src/infrastructure/databases/postgres/migrations/2025-01-19-175119_init_database/: down.sql  up.sql
src/infrastructure/databases/postgres/models/: japanese_word.rs
src/infrastructure/databases/postgres/repositories/: japanese_word.rs
