[package]
name = "kafjisho-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = "0.10.0"
cookie = "0.18.1"
async-trait = "0.1.85"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.6", features = [
    "postgres",
    "serde_json",
    "chrono",
    "r2d2",
    "uuid",
] }
dotenvy = "0.15.7"
anyhow = "1.0.95"
argon2 = "0.5.3"
rand = "0.8.5"
jsonwebtoken = { version = "9.3.0", default-features = false }
uuid = { version = "1.11.1", features = [
    "v4",                
    "fast-rng",         
    "macro-diagnostics",
    "serde",
] }